Adding new classes to grind